syntax="proto3";

package authpb;

option go_package = "authpb";

message CreateTokenRequest {
	string username=1;
	string password=2;
}

message CreateTokenResponse {
	string token=1;
	int64 expires=2;
	string username=3;
	int64 userid=4;
}

message ValidateTokenRequest {
	string token=1;
}

message ValidateTokenResponse {
	bool valid=1;
	string username=2;
	int64 userid=3;
}

service AuthService {
	rpc CreateToken(CreateTokenRequest) returns (CreateTokenResponse) {};
	rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {};
}
